fix(images): fix fig caption contrast error put #333 instead of #ccc fix issue #22

--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -41,5 +41,5 @@
 
 .figure-caption {
   font-size: $figure-caption-font-size;
-  color: $gray-light-o;
+  color: $gray-dark;
 }
